--- a/templates/search.html
+++ b/templates/search.html
@@ -573,5 +573,18 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
         ></script>
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container text-center">
+                <span class="text-muted">
+                    <a
+                        href="https://github.com/crazyuploader/NetViz"
+                        target="_blank"
+                        class="text-decoration-none text-muted"
+                    >
+                        <i class="bi bi-github me-2"></i>NetViz on GitHub
+                    </a>
+                </span>
+            </div>
+        </footer>
     </body>
 </html>
